# HeapForge

./: CMakeLists.txt  README.md
example/: main.c
include/: allocators.h  benchmark.h  bump_alloc.h  std_alloc.h  utils.h
src/: benchmark.c  bump_alloc.c  std_alloc.c
